# akahu-py

./: .gitignore  .readthedocs.yaml  README.md  gen.sh  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/akahu/: client.rst
docs/source/akahu/api/endpoints/: me.rst  payments.rst  transactions.rst
docs/source/akahu/api/rest/endpoint/: get.rst  list.rst
docs/source/akahu/api/rest/models/: paged_response.rst
docs/source/akahu/cli/: me.rst  tokens.rst  transactions.rst  utils.rst
docs/source/akahu/models/: account.rst  payment.rst
readthedocs/: cli.rst  conf.py  index.rst  requirements.txt
readthedocs/akahu/: command.rst
readthedocs/akahu/api/endpoints/: accounts.rst  pending_transactions.rst  refresh.rst  transfers.rst
readthedocs/akahu/api/rest/: base.rst  client.rst
readthedocs/akahu/api/rest/endpoint/: defaults.rst  getbyid.rst
readthedocs/akahu/api/rest/models/: api_error.rst
readthedocs/akahu/cli/: account.rst
readthedocs/akahu/models/: transaction.rst  user.rst
src/akahu/: client.py  command.py  utils.py
src/akahu/api/endpoints/: accounts.py  me.py  payments.py  pending_transactions.py  refresh.py  transactions.py  transfers.py
src/akahu/api/rest/: base.py  client.py
src/akahu/api/rest/endpoint/: get.py  getbyid.py  list.py
src/akahu/api/rest/models/: api_error.py
src/akahu/cli/: account.py  me.py  refresh.py  tokens.py  transactions.py  utils.py
src/akahu/models/: account.py  payment.py  transaction.py  user.py
src/akahu/rest/: base.py  client.py
src/akahu/rest/endpoint/: defaults.py  get.py  getbyid.py  list.py
src/akahu/rest/models/: api_error.py  paged_response.py
