[project]
name = "akahu-py"
version = "0.1.2"
description = "Akahu api client"
readme = "README.md"
authors = [
    { name = "Jason Schwarzenberger", email = "jason@js.org.nz" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "click>=8.2.1",
    "click-extra>=5.0.0",
    "pydantic>=2.11.5",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "xdg-base-dirs>=6.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-click>=6.0.0",
    "sphinxcontrib-autoprogram>=0.1.9",
]

[project.scripts]
akahu-py = "akahu.command:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akahu"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]
exclude = ["**/tests/**"]

[tool.uv.sources]
akahu-py = { workspace = true }
